website/versioned_docs/version-2.7.x/reference/subsystems/setuptools.mdx
---
title: setuptools
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

Python setuptools, used to package `python_distribution` targets.

Backend: <span className="color--primary">`pants.core`</span>

Config section: <span className="color--primary">`[setuptools]`</span>

<span className={styles.options}>

## Basic options

None

## Advanced options

### `version`

<Option
  cli_repr={`--setuptools-version=<str>`}
  env_repr="PANTS_SETUPTOOLS_VERSION"
  default_repr={`setuptools>=50.3.0,<58.0`}
>
  Requirement string for the tool.
</Option>

### `extra_requirements`

<Option
  cli_repr={`--setuptools-extra-requirements="['<str>', '<str>', ...]"`}
  env_repr="PANTS_SETUPTOOLS_EXTRA_REQUIREMENTS"
  default_repr={`["wheel>=0.35.1,<0.38"]`}
>
  Any additional requirement strings to use with the tool. This is useful if the
  tool allows you to install plugins or if you need to constrain a dependency to
  a certain version.
</Option>

### `lockfile`

<Option
  cli_repr={`--setuptools-lockfile=<str>`}
  env_repr='PANTS_SETUPTOOLS_LOCKFILE'
  default_repr={`<default>`}
>
Path to a lockfile used for installing the tool.

Set to the string `<default>` to use a lockfile provided by Pants, so long as you have not changed the `--version` and `--extra-requirements` options, and the tool&#x27;s interpreter constraints are compatible with the default. Pants will error or warn if the lockfile is not compatible (controlled by `[python-setup].invalid_lockfile_behavior`). See https://github.com/pantsbuild/pants/blob/release_2.7.2/src/python/pants/backend/python/subsystems/setuptools_lockfile.txt for the default lockfile contents.

Set to the string `<none>` to opt out of using a lockfile. We do not recommend this, though, as lockfiles are essential for reproducible builds.

To use a custom lockfile, set this option to a file path relative to the build root, then run `./pants generate-lockfiles --resolve=setuptools`.

Lockfile generation currently does not wire up the `[python-repos]` options. If lockfile generation fails, you can manually generate a lockfile, such as by using pip-compile or `pip freeze`. Set this option to the path to your manually generated lockfile. When manually maintaining lockfiles, set `[python-setup].invalid_lockfile_behavior = 'ignore'`.

</Option>

## Deprecated options

None

</span>

